index.html chnaged Guest to away in header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </h5>
       </div>
       <div>
-        <h3 id="guest-title">GUEST</h3>
+        <h3 id="guest-title">AWAY</h3>
         <h4 id="away-score"></h4>
         <h5>
           <button onClick="awayOnePoint()">+1</button>
